# expressiongraph_wbf

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  mainpage.dox  manifest.xml  package.xml  readme.md
gtests/: CMakeLists.txt  constraintTests.cpp  controllerAndSpaceDescriptionTests.cpp  forceSolverTests.cpp  qpOasesVelocitySolverTests.cpp  testHelpFunctions.hpp
include/expressiongraph_wbf/controllers/: direct_controller.hpp  position_controller.hpp  position_deadzone_controller.hpp  position_ff_controller.hpp  prop_controller.hpp  rotation_controller.hpp  rotation_controllers.hpp  scalar_controllers.hpp
include/expressiongraph_wbf/solver/: constraints.hpp  controller_base.hpp  simple_force_solver.hpp  space_description.hpp  velocity_solver.hpp
include/expressiongraph_wbf/utils/: Urdf2Expr.hpp  UrdfExpr2.hpp  common_def.hpp  matlab_reporter.hpp
src/controllers/: direct_controller.cpp  position_controller.cpp  position_deadzone_controller.cpp  position_ff_controller.cpp  prop_controller.cpp  rotation_controller.cpp  rotation_controllers.cpp  scalar_controllers.cpp
src/solver/: constraints.cpp  controllers.cpp  simple_force_solver.cpp  space_description.cpp  velocity_solver.cpp
src/utils/: Urdf2Expr.cpp  UrdfExpr2.cpp  matlab_reporter.cpp
tests/: CMakeLists.txt  constraint_test.cpp  controller_test.cpp  parser_test.cpp  parser_test_lwr.cpp  parser_test_pr2.cpp  simple_force_solver_test.cpp  simple_force_solver_test_free_float.cpp  simple_force_solver_test_joint_cnstr.cpp  simple_force_solver_test_with_time.cpp  simple_force_solver_test_without_time_with_derivative.cpp  space_description_test.cpp  velocity_solver_test.cpp  velocity_solver_test_freefloat.cpp
urdf/: lwr.urdf  pr2.urdf
