file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}/tests)

rosbuild_add_executable(tests/controller_test controller_test.cpp)
target_link_libraries(tests/controller_test controllers)

rosbuild_add_executable(tests/space_description_test space_description_test.cpp)
target_link_libraries(tests/space_description_test space_description)

rosbuild_add_executable(tests/constraint_test constraint_test.cpp)
target_link_libraries(tests/constraint_test controllers space_description)

rosbuild_add_executable(tests/simple_force_solver_test simple_force_solver_test.cpp)
target_link_libraries(tests/simple_force_solver_test controllers simple_force_solver)

rosbuild_add_executable(tests/simple_force_solver_test_joint_cnstr simple_force_solver_test_joint_cnstr.cpp)
target_link_libraries(tests/simple_force_solver_test_joint_cnstr controllers simple_force_solver)

rosbuild_add_executable(tests/simple_force_solver_test_with_time simple_force_solver_test_with_time.cpp)
target_link_libraries(tests/simple_force_solver_test_with_time controllers simple_force_solver)

rosbuild_add_executable(tests/simple_force_solver_test_without_time_with_derivative simple_force_solver_test_without_time_with_derivative.cpp)
target_link_libraries(tests/simple_force_solver_test_without_time_with_derivative controllers simple_force_solver)


rosbuild_add_executable(tests/velocity_solver_test velocity_solver_test.cpp)
target_link_libraries(tests/velocity_solver_test controllers velocity_solver)

rosbuild_add_executable(tests/parser_test_pr2 parser_test_pr2.cpp)
target_link_libraries(tests/parser_test_pr2 urdf2Expr)

rosbuild_add_executable(tests/parser_test_lwr parser_test_lwr.cpp)
target_link_libraries(tests/parser_test_lwr urdf2Expr)
